[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.14"
cargo-watch = "8.4.0"
redis = { version = "0.23.0", features = ["tokio-native-tls-comp"] }
serde = "1.0.160"
tokio = { version = "1", features = ["full"] }
